// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots interact|SelectInput default 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  display: block;
}

.c2 {
  position: relative;
  width: 100%;
}

.c6 {
  box-sizing: border-box;
  position: absolute;
  background-color: #f9f9f9;
  box-shadow: 0 5px 15px rgba(0,0,0,0.08);
  z-index: 1;
  min-width: 160px;
  visibility: hidden;
}

.c5 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c5:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c5:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c5::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c4[disabled] {
  cursor: pointer;
  box-shadow: none;
}

.c1 {
  display: grid;
  grid-gap: 20px;
  grid-template-columns: repeat(1, fit-content(200px));
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      data-test="dropdown"
    >
      <div
        className="c3"
      >
        <input
          className="c4 c5"
          disabled={true}
          onChange={[Function]}
          onClick={[Function]}
          placeholder="Choose option"
          prefix={
            <ForwardRef
              offSet={10}
            >
              <MdKeyboardArrowDown />
            </ForwardRef>
          }
          type="text"
        />
        <div
          className="c6"
          data-test="dropdown-content"
          open={false}
        >
          <div
            className=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots interact|SelectInput disabled 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c3:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c3:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c3::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 153,153,153;
  display: block;
  width: 100%;
  border: 1px solid #999;
  background-color: unset;
}

.c4:hover {
  border: 1px solid #999;
}

.c4:focus {
  border: 1px solid #222;
}

.c4::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c2[disabled] {
  cursor: not-allowed;
}

.c1 {
  display: grid;
  grid-gap: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <input
      className="c2 c3"
      disabled={true}
      onChange={[Function]}
      prefix={
        <ForwardRef
          offSet={10}
        >
          <MdKeyboardArrowDown />
        </ForwardRef>
      }
      type="text"
      value="Disabled"
    />
    <input
      className="c2 c4"
      disabled={true}
      onChange={[Function]}
      prefix={
        <ForwardRef
          offSet={10}
        >
          <MdKeyboardArrowDown />
        </ForwardRef>
      }
      type="text"
      value="Disabled"
    />
  </div>
</div>
`;

exports[`Storyshots interact|SelectInput outlined 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #00a8d8;
  background-color: unset;
}

.c3:hover {
  border: 1px solid #999;
}

.c3:focus {
  border: 1px solid #222;
}

.c3::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c2[disabled] {
  cursor: pointer;
  box-shadow: none;
}

.c1 {
  display: grid;
  grid-gap: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <input
      className="c2 c3"
      disabled={true}
      onChange={[Function]}
      prefix={
        <ForwardRef
          offSet={10}
        >
          <MdKeyboardArrowDown />
        </ForwardRef>
      }
      type="text"
      value="Outlined"
    />
    <input
      className="c2 c3"
      disabled={true}
      onChange={[Function]}
      prefix={
        <ForwardRef
          offSet={10}
        >
          <MdKeyboardArrowDown />
        </ForwardRef>
      }
      type="text"
      value="Outlined"
    />
  </div>
</div>
`;

exports[`Storyshots interact|SelectInput purposes 1`] = `
.c0 {
  padding: 12px;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c4:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c4:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c4::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c8 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #00a8d8;
  background-color: unset;
}

.c8:hover {
  border: 1px solid #999;
}

.c8:focus {
  border: 1px solid #222;
}

.c8::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c8::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c8:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c8::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c8[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c5 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 153,153,153;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c5:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c5:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c5::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c6 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 76,175,80;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c6:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c6:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c6::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c7 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 239,83,80;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c7:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c7:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c7::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c7::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c7:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c7::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c7[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c9 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 153,153,153;
  display: block;
  width: 100%;
  border: 1px solid #999;
  background-color: unset;
}

.c9:hover {
  border: 1px solid #999;
}

.c9:focus {
  border: 1px solid #222;
}

.c9::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c9::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c9:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c9::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c9[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c10 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 76,175,80;
  display: block;
  width: 100%;
  border: 1px solid #4caf50;
  background-color: unset;
}

.c10:hover {
  border: 1px solid #999;
}

.c10:focus {
  border: 1px solid #222;
}

.c10::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c10::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c10:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c10::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c10[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c11 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 239,83,80;
  display: block;
  width: 100%;
  border: 1px solid #ef5350;
  background-color: unset;
}

.c11:hover {
  border: 1px solid #999;
}

.c11:focus {
  border: 1px solid #222;
}

.c11::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c11::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c11:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c11::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c11[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c3[disabled] {
  cursor: pointer;
  box-shadow: none;
}

.c2 {
  display: grid;
  grid-gap: 20px;
  grid-template-columns: repeat(4, fit-content(200px));
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: grid;
  grid-gap: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <input
        className="c3 c4"
        disabled={true}
        onChange={[Function]}
        prefix={
          <ForwardRef
            offSet={10}
          >
            <MdKeyboardArrowDown />
          </ForwardRef>
        }
        type="text"
        value="Primary"
      />
      <input
        className="c3 c5"
        disabled={true}
        onChange={[Function]}
        prefix={
          <ForwardRef
            offSet={10}
          >
            <MdKeyboardArrowDown />
          </ForwardRef>
        }
        type="text"
        value="Secondary"
      />
      <input
        className="c3 c6"
        disabled={true}
        onChange={[Function]}
        prefix={
          <ForwardRef
            offSet={10}
          >
            <MdKeyboardArrowDown />
          </ForwardRef>
        }
        type="text"
        value="Success"
      />
      <input
        className="c3 c7"
        disabled={true}
        onChange={[Function]}
        prefix={
          <ForwardRef
            offSet={10}
          >
            <MdKeyboardArrowDown />
          </ForwardRef>
        }
        type="text"
        value="Danger"
      />
      <input
        className="c3 c8"
        disabled={true}
        onChange={[Function]}
        prefix={
          <ForwardRef
            offSet={10}
          >
            <MdKeyboardArrowDown />
          </ForwardRef>
        }
        type="text"
        value="Primary"
      />
      <input
        className="c3 c9"
        disabled={true}
        onChange={[Function]}
        prefix={
          <ForwardRef
            offSet={10}
          >
            <MdKeyboardArrowDown />
          </ForwardRef>
        }
        type="text"
        value="Secondary"
      />
      <input
        className="c3 c10"
        disabled={true}
        onChange={[Function]}
        prefix={
          <ForwardRef
            offSet={10}
          >
            <MdKeyboardArrowDown />
          </ForwardRef>
        }
        type="text"
        value="Success"
      />
      <input
        className="c3 c11"
        disabled={true}
        onChange={[Function]}
        prefix={
          <ForwardRef
            offSet={10}
          >
            <MdKeyboardArrowDown />
          </ForwardRef>
        }
        type="text"
        value="Danger"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots interact|SelectInput sizes 1`] = `
.c0 {
  padding: 12px;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c4:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c4:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c4::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 0.8125rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c3:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c3:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c3::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c3[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c5 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1.1875rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c5:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c5:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c5::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c2[disabled] {
  cursor: pointer;
  box-shadow: none;
}

.c1 {
  display: grid;
  grid-gap: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <input
      className="c2 c3"
      disabled={true}
      onChange={[Function]}
      prefix={
        <ForwardRef
          offSet={10}
        >
          <MdKeyboardArrowDown />
        </ForwardRef>
      }
      type="text"
      value="Small"
    />
    <input
      className="c2 c4"
      disabled={true}
      onChange={[Function]}
      prefix={
        <ForwardRef
          offSet={10}
        >
          <MdKeyboardArrowDown />
        </ForwardRef>
      }
      type="text"
      value="Default"
    />
    <input
      className="c2 c5"
      disabled={true}
      onChange={[Function]}
      prefix={
        <ForwardRef
          offSet={10}
        >
          <MdKeyboardArrowDown />
        </ForwardRef>
      }
      type="text"
      value="Large"
    />
  </div>
</div>
`;
